--- a/Exercicio1(iframe)/iframe001.html
+++ b/Exercicio1(iframe)/iframe001.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        display {
+            display: fle;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
